--- a/MyGitProject/res/values/strings.xml
+++ b/MyGitProject/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">MyGitProject</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello puneet!</string>
+    <string name="hello_world">Hello puneet bhardwaj</string>
 
 </resources>
